--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
     <div id="root"></div>
 
-    <script src="./client/app.jsx"></script>
+    <script src="./react-app/app.jsx"></script>
 </body>
 </html>
